--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-output
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>Paul's Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        .profile-container {
+            max-width: 800px;
+            margin: 50px auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .profile-header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+                .profile-header h1 {
+            margin: 10px 0 5px;
+            font-size: 28px;
+        }
+        .profile-header p {
+            color: #666;
+        }
+        .profile-section {
+            margin-bottom: 20px;
+        }
+        .profile-section h2 {
+            font-size: 22px;
+            margin-bottom: 10px;
+            color: #4CAF50;
+        }
+        .profile-section p {
+            line-height: 1.6;
+        }
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .skill {
+            background: #4CAF50;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .contact a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        .contact a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="profile-container">
+        <div class="profile-header">
+            <h1>Paul</h1>
+            <p>Enthusiastic Learner | Developer | Innovator</p>
+        </div>
+
+        <div class="profile-section about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Paul, a passionate developer interested in creating innovative solutions to challenging problems. I enjoy coding, learning new technologies, and working on impactful projects.</p>
+        </div>
+
+        <div class="profile-section skills">
+            <h2>Skills</h2>
+            <div class="skills">
+                <span class="skill">HTML</span>
+                <span class="skill">CSS</span>
+                <span class="skill">JavaScript</span>
+                <span class="skill">React</span>
+                <span class="skill">Python</span>
+                <span class="skill">Data Analysis</span>
+            </div>
+        </div>
+
+        <div class="profile-section contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="pavulchinnappand.22aid@kongu.edu">pavulchinnappand.22aid@kongu.edu</a></p>
+            <p>GitHub: <a href="https://github.com/paulpaulD" target="_blank">GitHub.com/in/paul</a></p>
+        </div>
+    </div>
+</body>
+</html>
